api/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
      containers:
        - name: api
          securityContext:
            capabilities:
              drop:
                - all
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          image: CONTAINER_IMAGE_NAME
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP
          resources:
            requests:
              cpu: 60m
              memory: 160Mi
            limits:
              cpu: 120m
              memory: 320Mi
          readinessProbe:
            initialDelaySeconds: 15
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5001", "-rpc-timeout=5s"]
          livenessProbe:
            initialDelaySeconds: 15
            tcpSocket:
              port: 5001
      nodeSelector:
        kubernetes.io/os: linux
