api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
spec:
  type: ClusterIP
  ports:
  - port: 5001
    name: http
  selector:
    app.kubernetes.io/name: api
