api/kubernetes/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
     - port: 5001
       protocol: TCP
